// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots DashboardPost error 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.9rem",
                "fontWeight": 400,
              }
            }
          >
            Rubber baby buggy bumpers.
          </span>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "marginRight": "0.5rem",
                }
              }
            >
              <svg
                height="100%"
                style={
                  Object {
                    "fill": "#ff1e1e",
                    "height": "1rem",
                    "width": "1rem",
                  }
                }
                version="1.1"
                viewBox="0 0 16 16"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              >
                <g
                  className="torchRed"
                >
                  <path
                    d="M7.28522294,0.582295182 C7.68011914,-0.193881453 8.32015168,-0.194315304 8.71526856,0.582295182 L15.8443277,14.5946078 C16.2392239,15.3707845 15.8563826,16 14.9948436,16 L1.00564792,16 C0.141594621,16 -0.238953082,15.3712184 0.156163853,14.5946078 L7.28522294,0.582295182 Z M8.00063465,13.6403459 C8.4327265,13.6403459 8.78300622,13.2881948 8.78300622,12.8537945 C8.78300622,12.4193942 8.4327265,12.0672431 8.00063465,12.0672431 C7.56854277,12.0672431 7.21826309,12.4193942 7.21826309,12.8537945 C7.21826309,13.2881948 7.56854277,13.6403459 8.00063465,13.6403459 Z M7.3863128,5.77483204 C7.38259314,5.77483204 7.37887467,5.77496538 7.37516447,5.77523181 C7.2889657,5.78142176 7.22407908,5.85669092 7.23023613,5.94335021 L7.59906844,11.1345893 C7.60491729,11.2169107 7.67305263,11.2806917 7.75514511,11.2806917 L8.24612423,11.2806917 C8.32821668,11.2806917 8.39635201,11.2169107 8.40220086,11.1345893 L8.77103319,5.94335021 C8.77129818,5.93962018 8.77143079,5.93588184 8.77143079,5.93214231 C8.77143079,5.84526225 8.7013749,5.77483204 8.61495648,5.77483204 L7.3863128,5.77483204 Z"
                  />
                </g>
              </svg>
            </div>
            <span>
              <span
                style={
                  Object {
                    "color": "#ff1e1e",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Sharing failed. Try again?
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div>
              <span>
                <span
                  style={
                    Object {
                      "marginLeft": "0.5rem",
                    }
                  }
                >
                  <button
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                      }
                    }
                  >
                    <span
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                    >
                      <span
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "\\"Open Sans\\", sans-serif",
                            "fontSize": "0.8rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </span>
              </span>
              <span
                style={
                  Object {
                    "marginLeft": "0.7rem",
                  }
                }
              >
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </span>
              <span>
                <span
                  style={
                    Object {
                      "borderLeft": "0.063rem solid transparent",
                      "marginLeft": "0.7rem",
                      "marginRight": "0.7rem",
                    }
                  }
                />
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Share Now
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost isConfirmingDelete 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.9rem",
                "fontWeight": 400,
              }
            }
          >
            Rubber baby buggy bumpers.
          </span>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post will be sent at 9:21 (GMT)
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div>
              <span>
                <span
                  style={
                    Object {
                      "marginLeft": "0.5rem",
                    }
                  }
                >
                  <button
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                      }
                    }
                  >
                    <span
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                    >
                      <span
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "\\"Open Sans\\", sans-serif",
                            "fontSize": "0.8rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Cancel
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  style={
                    Object {
                      "marginLeft": "0.5rem",
                    }
                  }
                >
                  <button
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                      }
                    }
                  >
                    <span
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                    >
                      <span
                        style={
                          Object {
                            "color": "#ff1e1e",
                            "fontFamily": "\\"Open Sans\\", sans-serif",
                            "fontSize": "0.8rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Confirm
                      </span>
                    </span>
                  </button>
                </span>
              </span>
              <span
                style={
                  Object {
                    "marginLeft": "0.7rem",
                  }
                }
              >
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </span>
              <span>
                <span
                  style={
                    Object {
                      "borderLeft": "0.063rem solid transparent",
                      "marginLeft": "0.7rem",
                      "marginRight": "0.7rem",
                    }
                  }
                />
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Share Now
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost isDeleting 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "opacity": 0.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.9rem",
                "fontWeight": 400,
              }
            }
          >
            Rubber baby buggy bumpers.
          </span>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post will be sent at 9:21 (GMT)
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "0.8rem",
                  "fontWeight": 400,
                }
              }
            >
               Deleting... 
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost isWorking 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.9rem",
                "fontWeight": 400,
              }
            }
          >
            Rubber baby buggy bumpers.
          </span>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post will be sent at 9:21 (GMT)
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "0.8rem",
                  "fontWeight": 400,
                }
              }
            >
               Sharing... 
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost queued post 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.9rem",
                "fontWeight": 400,
              }
            }
          >
            Rubber baby buggy bumpers.
          </span>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post will be sent at 9:21 (GMT)
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div>
              <span>
                <span
                  style={
                    Object {
                      "marginLeft": "0.5rem",
                    }
                  }
                >
                  <button
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                      }
                    }
                  >
                    <span
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                    >
                      <span
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "\\"Open Sans\\", sans-serif",
                            "fontSize": "0.8rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </span>
              </span>
              <span
                style={
                  Object {
                    "marginLeft": "0.7rem",
                  }
                }
              >
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </span>
              <span>
                <span
                  style={
                    Object {
                      "borderLeft": "0.063rem solid transparent",
                      "marginLeft": "0.7rem",
                      "marginRight": "0.7rem",
                    }
                  }
                />
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Share Now
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost retweet 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          
          <div
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "backgroundColor": "#fcfcfc",
                "border": "0.063rem solid #e6ebef",
                "borderRadius": "0.126rem",
                "color": "#323b43",
                "fontSize": "0.9rem",
                "lineHeight": 1.5,
                "padding": "1rem",
                "transition": "box-shadow 0.1s linear",
              }
            }
          >
            <div
              style={
                Object {
                  "marginBottom": "1rem",
                }
              }
            >
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                  }
                }
              >
                <img
                  alt=""
                  src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
                  style={
                    Object {
                      "borderRadius": "50%",
                      "height": "2rem",
                      "maxHeight": undefined,
                      "maxWidth": undefined,
                      "minHeight": undefined,
                      "minWidth": undefined,
                      "objectFit": undefined,
                      "width": "2rem",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "column",
                      "marginLeft": "1rem",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "0.8rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Joel Gascoigne
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "0.7rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    @joelgascoigne
                  </span>
                </div>
              </div>
            </div>
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "0.9rem",
                  "fontWeight": 400,
                }
              }
            >
              Rubber baby buggy bumpers.
            </span>
          </div>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post will be sent at 9:21 (GMT)
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div>
              <span>
                <span
                  style={
                    Object {
                      "marginLeft": "0.5rem",
                    }
                  }
                >
                  <button
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                      }
                    }
                  >
                    <span
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                    >
                      <span
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "\\"Open Sans\\", sans-serif",
                            "fontSize": "0.8rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </span>
              </span>
              <span
                style={
                  Object {
                    "marginLeft": "0.7rem",
                  }
                }
              >
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </span>
              <span>
                <span
                  style={
                    Object {
                      "borderLeft": "0.063rem solid transparent",
                      "marginLeft": "0.7rem",
                      "marginRight": "0.7rem",
                    }
                  }
                />
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Share Now
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost retweet with comment 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "0.9rem",
                  "fontWeight": 400,
                }
              }
            >
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "color": "#168eea",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </div>
          <div
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "backgroundColor": "#fcfcfc",
                "border": "0.063rem solid #e6ebef",
                "borderRadius": "0.126rem",
                "color": "#323b43",
                "fontSize": "0.9rem",
                "lineHeight": 1.5,
                "padding": "1rem",
                "transition": "box-shadow 0.1s linear",
              }
            }
          >
            <div
              style={
                Object {
                  "marginBottom": "1rem",
                }
              }
            >
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                  }
                }
              >
                <img
                  alt=""
                  src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
                  style={
                    Object {
                      "borderRadius": "50%",
                      "height": "2rem",
                      "maxHeight": undefined,
                      "maxWidth": undefined,
                      "minHeight": undefined,
                      "minWidth": undefined,
                      "objectFit": undefined,
                      "width": "2rem",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "column",
                      "marginLeft": "1rem",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "0.8rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Joel Gascoigne
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "0.7rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    @joelgascoigne
                  </span>
                </div>
              </div>
            </div>
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "0.9rem",
                  "fontWeight": 400,
                }
              }
            >
              Rubber baby buggy bumpers.
            </span>
          </div>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post will be sent at 9:21 (GMT)
              </span>
            </span>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div>
              <span>
                <span
                  style={
                    Object {
                      "marginLeft": "0.5rem",
                    }
                  }
                >
                  <button
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                      }
                    }
                  >
                    <span
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                    >
                      <span
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "\\"Open Sans\\", sans-serif",
                            "fontSize": "0.8rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Delete
                      </span>
                    </span>
                  </button>
                </span>
              </span>
              <span
                style={
                  Object {
                    "marginLeft": "0.7rem",
                  }
                }
              >
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </span>
              <span>
                <span
                  style={
                    Object {
                      "borderLeft": "0.063rem solid transparent",
                      "marginLeft": "0.7rem",
                      "marginRight": "0.7rem",
                    }
                  }
                />
                <button
                  disabled={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "background": "none",
                      "backgroundColor": "unset",
                      "border": "none",
                      "borderRadius": "unset",
                      "color": "unset",
                      "cursor": "pointer",
                      "display": "unset",
                      "fontFamily": "unset",
                      "fontSize": "unset",
                      "fontWeight": "unset",
                      "lineHeight": "unset",
                      "margin": "unset",
                      "outline": "none",
                      "padding": 0,
                      "transition": "unset",
                    }
                  }
                >
                  <span
                    onMouseEnter={undefined}
                    onMouseLeave={undefined}
                  >
                    <span
                      style={
                        Object {
                          "color": "#000",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "0.8rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Share Now
                    </span>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPost sent 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
          "minWidth": 0,
        }
      }
    >
      <div
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "0.063rem solid #e6ebef",
            "borderRadius": "0.126rem",
            "color": "#323b43",
            "fontSize": "0.9rem",
            "lineHeight": 1.5,
            "padding": 0,
            "transition": "box-shadow 0.1s linear",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "1rem",
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.9rem",
                "fontWeight": 400,
              }
            }
          >
            Rubber baby buggy bumpers.
          </span>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#fcfcfc",
              "borderTop": "0.063rem solid #e6ebef",
              "display": "flex",
              "padding": "0.5rem 1rem",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexGrow": 1,
              }
            }
          >
            <span>
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                This post was sent June 20th at 9:21 (GMT)
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooter isConfirmingDelete 1`] = `
<span>
  <div
    style={
      Object {
        "backgroundColor": "#fcfcfc",
        "borderTop": "0.063rem solid #e6ebef",
        "display": "flex",
        "padding": "0.5rem 1rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexGrow": 1,
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "color": "#000",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "0.8rem",
              "fontWeight": 400,
            }
          }
        >
          This post will be sent at 9:21 (GMT)
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div>
        <span>
          <span
            style={
              Object {
                "marginLeft": "0.5rem",
              }
            }
          >
            <button
              disabled={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "background": "none",
                  "backgroundColor": "unset",
                  "border": "none",
                  "borderRadius": "unset",
                  "color": "unset",
                  "cursor": "pointer",
                  "display": "unset",
                  "fontFamily": "unset",
                  "fontSize": "unset",
                  "fontWeight": "unset",
                  "lineHeight": "unset",
                  "margin": "unset",
                  "outline": "none",
                  "padding": 0,
                  "transition": "unset",
                }
              }
            >
              <span
                onMouseEnter={undefined}
                onMouseLeave={undefined}
              >
                <span
                  style={
                    Object {
                      "color": "#000",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Cancel
                </span>
              </span>
            </button>
          </span>
          <span
            style={
              Object {
                "marginLeft": "0.5rem",
              }
            }
          >
            <button
              disabled={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "background": "none",
                  "backgroundColor": "unset",
                  "border": "none",
                  "borderRadius": "unset",
                  "color": "unset",
                  "cursor": "pointer",
                  "display": "unset",
                  "fontFamily": "unset",
                  "fontSize": "unset",
                  "fontWeight": "unset",
                  "lineHeight": "unset",
                  "margin": "unset",
                  "outline": "none",
                  "padding": 0,
                  "transition": "unset",
                }
              }
            >
              <span
                onMouseEnter={undefined}
                onMouseLeave={undefined}
              >
                <span
                  style={
                    Object {
                      "color": "#ff1e1e",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Confirm
                </span>
              </span>
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "marginLeft": "0.7rem",
            }
          }
        >
          <button
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <span
              onMouseEnter={undefined}
              onMouseLeave={undefined}
            >
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Edit
              </span>
            </span>
          </button>
        </span>
        <span>
          <span
            style={
              Object {
                "borderLeft": "0.063rem solid transparent",
                "marginLeft": "0.7rem",
                "marginRight": "0.7rem",
              }
            }
          />
          <button
            disabled={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <span
              onMouseEnter={undefined}
              onMouseLeave={undefined}
            >
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Share Now
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooter isDeleting 1`] = `
<span>
  <div
    style={
      Object {
        "backgroundColor": "#fcfcfc",
        "borderTop": "0.063rem solid #e6ebef",
        "display": "flex",
        "padding": "0.5rem 1rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexGrow": 1,
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "color": "#000",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "0.8rem",
              "fontWeight": 400,
            }
          }
        >
          This post will be sent at 9:21 (GMT)
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "0.8rem",
            "fontWeight": 400,
          }
        }
      >
         Deleting... 
      </span>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooter isWorking 1`] = `
<span>
  <div
    style={
      Object {
        "backgroundColor": "#fcfcfc",
        "borderTop": "0.063rem solid #e6ebef",
        "display": "flex",
        "padding": "0.5rem 1rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexGrow": 1,
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "color": "#000",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "0.8rem",
              "fontWeight": 400,
            }
          }
        >
          This post will be sent at 9:21 (GMT)
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "0.8rem",
            "fontWeight": 400,
          }
        }
      >
         Sharing... 
      </span>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooter post with error 1`] = `
<span>
  <div
    style={
      Object {
        "backgroundColor": "#fcfcfc",
        "borderTop": "0.063rem solid #e6ebef",
        "display": "flex",
        "padding": "0.5rem 1rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexGrow": 1,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "marginRight": "0.5rem",
          }
        }
      >
        <svg
          height="100%"
          style={
            Object {
              "fill": "#ff1e1e",
              "height": "1rem",
              "width": "1rem",
            }
          }
          version="1.1"
          viewBox="0 0 16 16"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            className="torchRed"
          >
            <path
              d="M7.28522294,0.582295182 C7.68011914,-0.193881453 8.32015168,-0.194315304 8.71526856,0.582295182 L15.8443277,14.5946078 C16.2392239,15.3707845 15.8563826,16 14.9948436,16 L1.00564792,16 C0.141594621,16 -0.238953082,15.3712184 0.156163853,14.5946078 L7.28522294,0.582295182 Z M8.00063465,13.6403459 C8.4327265,13.6403459 8.78300622,13.2881948 8.78300622,12.8537945 C8.78300622,12.4193942 8.4327265,12.0672431 8.00063465,12.0672431 C7.56854277,12.0672431 7.21826309,12.4193942 7.21826309,12.8537945 C7.21826309,13.2881948 7.56854277,13.6403459 8.00063465,13.6403459 Z M7.3863128,5.77483204 C7.38259314,5.77483204 7.37887467,5.77496538 7.37516447,5.77523181 C7.2889657,5.78142176 7.22407908,5.85669092 7.23023613,5.94335021 L7.59906844,11.1345893 C7.60491729,11.2169107 7.67305263,11.2806917 7.75514511,11.2806917 L8.24612423,11.2806917 C8.32821668,11.2806917 8.39635201,11.2169107 8.40220086,11.1345893 L8.77103319,5.94335021 C8.77129818,5.93962018 8.77143079,5.93588184 8.77143079,5.93214231 C8.77143079,5.84526225 8.7013749,5.77483204 8.61495648,5.77483204 L7.3863128,5.77483204 Z"
            />
          </g>
        </svg>
      </div>
      <span>
        <span
          style={
            Object {
              "color": "#ff1e1e",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "0.8rem",
              "fontWeight": 400,
            }
          }
        >
          Woops! Something went wrong. Try again?
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div>
        <span>
          <span
            style={
              Object {
                "marginLeft": "0.5rem",
              }
            }
          >
            <button
              disabled={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "background": "none",
                  "backgroundColor": "unset",
                  "border": "none",
                  "borderRadius": "unset",
                  "color": "unset",
                  "cursor": "pointer",
                  "display": "unset",
                  "fontFamily": "unset",
                  "fontSize": "unset",
                  "fontWeight": "unset",
                  "lineHeight": "unset",
                  "margin": "unset",
                  "outline": "none",
                  "padding": 0,
                  "transition": "unset",
                }
              }
            >
              <span
                onMouseEnter={undefined}
                onMouseLeave={undefined}
              >
                <span
                  style={
                    Object {
                      "color": "#000",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Delete
                </span>
              </span>
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "marginLeft": "0.7rem",
            }
          }
        >
          <button
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <span
              onMouseEnter={undefined}
              onMouseLeave={undefined}
            >
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Edit
              </span>
            </span>
          </button>
        </span>
        <span>
          <span
            style={
              Object {
                "borderLeft": "0.063rem solid transparent",
                "marginLeft": "0.7rem",
                "marginRight": "0.7rem",
              }
            }
          />
          <button
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <span
              onMouseEnter={undefined}
              onMouseLeave={undefined}
            >
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Share Now
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooter queued post 1`] = `
<span>
  <div
    style={
      Object {
        "backgroundColor": "#fcfcfc",
        "borderTop": "0.063rem solid #e6ebef",
        "display": "flex",
        "padding": "0.5rem 1rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexGrow": 1,
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "color": "#000",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "0.8rem",
              "fontWeight": 400,
            }
          }
        >
          This post will be sent at 9:21 (GMT)
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div>
        <span>
          <span
            style={
              Object {
                "marginLeft": "0.5rem",
              }
            }
          >
            <button
              disabled={undefined}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "background": "none",
                  "backgroundColor": "unset",
                  "border": "none",
                  "borderRadius": "unset",
                  "color": "unset",
                  "cursor": "pointer",
                  "display": "unset",
                  "fontFamily": "unset",
                  "fontSize": "unset",
                  "fontWeight": "unset",
                  "lineHeight": "unset",
                  "margin": "unset",
                  "outline": "none",
                  "padding": 0,
                  "transition": "unset",
                }
              }
            >
              <span
                onMouseEnter={undefined}
                onMouseLeave={undefined}
              >
                <span
                  style={
                    Object {
                      "color": "#000",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Delete
                </span>
              </span>
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "marginLeft": "0.7rem",
            }
          }
        >
          <button
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <span
              onMouseEnter={undefined}
              onMouseLeave={undefined}
            >
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Edit
              </span>
            </span>
          </button>
        </span>
        <span>
          <span
            style={
              Object {
                "borderLeft": "0.063rem solid transparent",
                "marginLeft": "0.7rem",
                "marginRight": "0.7rem",
              }
            }
          />
          <button
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <span
              onMouseEnter={undefined}
              onMouseLeave={undefined}
            >
              <span
                style={
                  Object {
                    "color": "#000",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "0.8rem",
                    "fontWeight": 400,
                  }
                }
              >
                Share Now
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooter sent post 1`] = `
<span>
  <div
    style={
      Object {
        "backgroundColor": "#fcfcfc",
        "borderTop": "0.063rem solid #e6ebef",
        "display": "flex",
        "padding": "0.5rem 1rem",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexGrow": 1,
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "color": "#000",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "0.8rem",
              "fontWeight": 400,
            }
          }
        >
          This post will be sent at 9:21 (GMT)
        </span>
      </span>
    </div>
  </div>
</span>
`;

exports[`Snapshots DashboardPostFooterDelete black text 1`] = `
<span>
  <span>
    <span
      style={
        Object {
          "marginLeft": "0.5rem",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#000",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Delete
          </span>
        </span>
      </button>
    </span>
  </span>
</span>
`;

exports[`Snapshots DashboardPostFooterDelete default 1`] = `
<span>
  <span>
    <span
      style={
        Object {
          "marginLeft": "0.5rem",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Delete
          </span>
        </span>
      </button>
    </span>
  </span>
</span>
`;

exports[`Snapshots DashboardPostFooterDelete isConfirmingDelete 1`] = `
<span>
  <span>
    <span
      style={
        Object {
          "marginLeft": "0.5rem",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Cancel
          </span>
        </span>
      </button>
    </span>
    <span
      style={
        Object {
          "marginLeft": "0.5rem",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#ff1e1e",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Confirm
          </span>
        </span>
      </button>
    </span>
  </span>
</span>
`;

exports[`Snapshots Example default 1`] = `
<span>
  <div>
    Example
  </div>
</span>
`;

exports[`Snapshots HoverableText color = torchRed 1`] = `
<span>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      style={
        Object {
          "color": "#ff1e1e",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
        }
      }
    >
      Hoverable Text!
    </span>
  </span>
</span>
`;

exports[`Snapshots HoverableText default 1`] = `
<span>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
        }
      }
    >
      Hoverable Text!
    </span>
  </span>
</span>
`;

exports[`Snapshots HoverableText hovered + hoverColor = curiousBlue 1`] = `
<span>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      style={
        Object {
          "color": "#168eea",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
        }
      }
    >
      Hoverable Text!
    </span>
  </span>
</span>
`;

exports[`Snapshots HoverableText onMouseEnter + onMouseLeave 1`] = `
<span>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
        }
      }
    >
      Hoverable Text!
    </span>
  </span>
</span>
`;

exports[`Snapshots HoverableText size = small 1`] = `
<span>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "0.8rem",
          "fontWeight": 400,
        }
      }
    >
      Hoverable Text!
    </span>
  </span>
</span>
`;

exports[`Snapshots RetweetPanel default 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <img
      alt=""
      src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
      style={
        Object {
          "borderRadius": "50%",
          "height": "2rem",
          "maxHeight": undefined,
          "maxWidth": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "objectFit": undefined,
          "width": "2rem",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "marginLeft": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "0.8rem",
            "fontWeight": 400,
          }
        }
      >
        Joel Gascoigne
      </span>
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "0.7rem",
            "fontWeight": 400,
          }
        }
      >
        @joelgascoigne
      </span>
    </div>
  </div>
</span>
`;

exports[`Snapshots Tab active 1`] = `
<span>
  <div
    style={
      Object {
        "borderBottom": "2px solid #168eea",
        "display": "inline-block",
        "margin": "0 8px 0 8px",
        "minWidth": "60px",
        "padding": "0 4px 16px 4px",
        "textAlign": "center",
      }
    }
  >
    <button
      disabled={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "background": "none",
          "backgroundColor": "unset",
          "border": "none",
          "borderRadius": "unset",
          "color": "unset",
          "cursor": "pointer",
          "display": "unset",
          "fontFamily": "unset",
          "fontSize": "unset",
          "fontWeight": "unset",
          "lineHeight": "unset",
          "margin": "unset",
          "outline": "none",
          "padding": 0,
          "transition": "unset",
        }
      }
    >
      <span
        onMouseEnter={undefined}
        onMouseLeave={undefined}
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          Sent
        </span>
      </span>
    </button>
  </div>
</span>
`;

exports[`Snapshots Tab default 1`] = `
<span>
  <div
    style={
      Object {
        "borderBottom": "",
        "display": "inline-block",
        "margin": "0 8px 0 8px",
        "minWidth": "60px",
        "padding": "0 4px 16px 4px",
        "textAlign": "center",
      }
    }
  >
    <button
      disabled={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "background": "none",
          "backgroundColor": "unset",
          "border": "none",
          "borderRadius": "unset",
          "color": "unset",
          "cursor": "pointer",
          "display": "unset",
          "fontFamily": "unset",
          "fontSize": "unset",
          "fontWeight": "unset",
          "lineHeight": "unset",
          "margin": "unset",
          "outline": "none",
          "padding": 0,
          "transition": "unset",
        }
      }
    >
      <span
        onMouseEnter={undefined}
        onMouseLeave={undefined}
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          Queue
        </span>
      </span>
    </button>
  </div>
</span>
`;

exports[`Snapshots Tabs default 1`] = `
<span>
  <div
    style={
      Object {
        "borderBottom": "1px solid #ced7df",
      }
    }
  >
    <div
      style={
        Object {
          "borderBottom": "",
          "display": "inline-block",
          "margin": "0 8px 0 8px",
          "minWidth": "60px",
          "padding": "0 4px 16px 4px",
          "textAlign": "center",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Queue (1)
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "borderBottom": "",
          "display": "inline-block",
          "margin": "0 8px 0 8px",
          "minWidth": "60px",
          "padding": "0 4px 16px 4px",
          "textAlign": "center",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Sent Posts
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "borderBottom": "",
          "display": "inline-block",
          "margin": "0 8px 0 8px",
          "minWidth": "60px",
          "padding": "0 4px 16px 4px",
          "textAlign": "center",
        }
      }
    >
      <button
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <span
          onMouseEnter={undefined}
          onMouseLeave={undefined}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Settings
          </span>
        </span>
      </button>
    </div>
  </div>
</span>
`;
